[metadata]
name = mr-hub-gui
version = 0.0.1
author = Francesco Santini
author_email = francesco.santini@unibas.ch
description = A GUI to add packages to MR-Hub
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fsantini/mr-hub-gui
project_urls =
    Bug Tracker = https://github.com/fsantini/mr-hub-gui/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
scripts = mr-hub-gui
install_requires =
    requests
    PySide2
    PyGithub
python_requires = >=3.6
